# tp-3-filipakeksander

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
Projekt_3/: CMakeLists.txt  README.md
Projekt_3/src/tp3_filipaleksander/: __init__.pyi
Projekt_4/: README.md  projekt_4_test_v3.sln
Projekt_4/projekt_4_test_v3/: projekt_4_test_v3.cpp  projekt_4_test_v3.vcxproj  projekt_4_test_v3.vcxproj.filters
Raport/: raport.ipynb
src/: main.cpp
src/tp3_filipaleksander/: __init__.py  __init__.pyi
